--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,10 +1,4 @@
-bind mwheelup jb
-bind mwheeldown j
-bind space +j
-
-sensitivity 1.25
-
-alias "dc" "disconnect"
-
 exec sound/sounds
 exec movement/setup
+exec game/autocrosshair
+exec game/binds
