--- a/game/binds.cfg
+++ b/game/binds.cfg
@@ -1,15 +1,20 @@
-bind mwheelup jb
-bind mwheeldown j
-bind space +j
-bind mouse5 slot1
-bind mouse4 slot2
-bind q slot3
-bind 5 slot5
-bind 2 slot6
-bind v slot7
-bind z slot8
-bind 4 slot9
-bind 1 slot10
+bind "mwheelup" "jb"
+bind "mwheeldown" "+jump_"
+bind "space" "+jump_"
+bind "mouse5" "slot1"
+bind "mouse4" "slot2"
+bind "q" "slot3"
+bind "5" "slot5"
+bind "2" "slot6"
+bind "v" "slot7"
+bind "z" "slot8"
+bind "4" "slot9"
+bind "1" "slot10"
+
+bind "f" "toggle_inspect"
+alias "toggle_inspect" "inspect_on"
+alias "inspect_on" "+lookatweapon; alias toggle_inspect inspect_off"
+alias "inspect_off" "-lookatweapon; alias toggle_inspect inspect_on"
 
 sensitivity 1.25
 
