--- a/game/binds.cfg
+++ b/game/binds.cfg
@@ -1,6 +1,9 @@
-bind "mwheelup" "jb"
+alias +jump_ "exec "movement/+jump"
+alias -jump_ "exec "movement/-jump"
+
 bind "mwheeldown" "+jump_"
-bind "space" "+jump_"
+bind "mwheelup" "jb"
+bind "space" "+jump"
 bind "mouse5" "slot1"
 bind "mouse4" "slot2"
 bind "q" "slot3"
@@ -10,11 +13,6 @@ bind "v" "slot7"
 bind "z" "slot8"
 bind "4" "slot9"
 bind "1" "slot10"
-
-bind "f" "toggle_inspect"
-alias "toggle_inspect" "inspect_on"
-alias "inspect_on" "+lookatweapon; alias toggle_inspect inspect_off"
-alias "inspect_off" "-lookatweapon; alias toggle_inspect inspect_on"
 
 sensitivity 1.25
 
